--- a/ctfo_client/package.json
+++ b/ctfo_client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
+    "react-calendar": "^2.18.1",
     "react-dom": "^16.8.6",
     "react-pose": "^4.0.8",
     "react-router-dom": "^5.0.0",
