--- a/ctfo_client/package.json
+++ b/ctfo_client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.6",
     "react-calendar": "^2.18.1",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.8.1",
     "react-pose": "^4.0.8",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
