--- a/ctfo_client/package.json
+++ b/ctfo_client/package.json
@@ -18,7 +18,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://localhost:8080/api",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -27,5 +26,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "https://localhost:8080/"
 }
