--- a/ctfo_client/package.json
+++ b/ctfo_client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.0",
     "dayjs": "^1.8.12",
     "google-map-react": "^1.1.4",
     "react": "^16.8.6",
