--- a/ctfo_client/package.json
+++ b/ctfo_client/package.json
@@ -6,11 +6,12 @@
     "animate.css": "^3.7.0",
     "bootstrap": "^4.3.1",
     "dayjs": "^1.8.12",
+    "mapbox-gl": "^0.53.1",
     "react": "^16.8.6",
     "react-calendar": "^2.18.1",
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.6",
-    "react-mapbox-gl": "^4.2.1",
+    "react-mapbox-gl": "^4.2.2",
     "react-modal": "^3.8.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
